KUBERNETES/001.Pod_Manifest.yaml
apiVersion: v1
kind: Pod 
metadata: 
   name: nginx-pod
   labels:
      env: Demo 
spec:
   containers:
     - name: nginx-container
       image: nginx
       ports:
       - containerPort: 80
